Open/Save window should not allow shortcuts for unwanted changes #105435

Closed
opened 2023-03-04 10:51:27 +01:00 by Michael Klein · 3 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.49

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-03 23:37, hash: d0cfbc23db81
Worked: (newest version of Blender that worked as expected)

Short description of error
The actual mechanics of the save dialog window is not a real bug but annyoing and can cause unwanted changes saved by accident. When I save a scene and the mouse pointer is outside the window, Blender will execute shortcuts instead of using the scene name field properly. I recommend to remove this "feature" because it can cause unwanted changes to the scene which will be saved by accident.

Exact steps for others to reproduce the error

  • Save Scene
  • Click on scene name field
  • Move mouse pointer outside the Save window
  • Type name of scene

Result: Blender will not use the name field but executes shortcuts when typing.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.49 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-03 23:37, hash: `d0cfbc23db81` Worked: (newest version of Blender that worked as expected) **Short description of error** The actual mechanics of the save dialog window is not a real bug but annyoing and can cause unwanted changes saved by accident. When I save a scene and the mouse pointer is outside the window, Blender will execute shortcuts instead of using the scene name field properly. I recommend to remove this "feature" because it can cause unwanted changes to the scene which will be saved by accident. **Exact steps for others to reproduce the error** - Save Scene - Click on scene name field - Move mouse pointer outside the Save window - Type name of scene Result: Blender will not use the name field but executes shortcuts when typing.
Michael Klein added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-04 10:51:27 +01:00

I believe #105446 will address this issue. If you click inside the name field first, and then let your mouse drift outside, typing will work as expected after that patch lands.

Shortcuts will still be active if you don't first click into that field though even after that patch.

CC @Harley

I believe #105446 will address this issue. If you click inside the name field first, and then let your mouse drift outside, typing will work as expected after that patch lands. Shortcuts will still be active if you don't first click into that field though even after that patch. CC @Harley
Jesse Yurkovich added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-05 00:26:54 +01:00
Harley Acheson self-assigned this 2023-03-05 02:19:20 +01:00
Member

Yes, this is mine. #105446 should fix it nicely.

Yes, this is mine. https://projects.blender.org/blender/blender/pulls/105446 should fix it nicely.
Member

@Renderbicks - I'm hoping you can test the following build:

https://builder.blender.org/download/patch/PR105446/

@Renderbicks - I'm hoping you can test the following build: https://builder.blender.org/download/patch/PR105446/
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-08 22:21:03 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105435
No description provided.