Fix #105435: Pause Win32 Auto-Focus During Text Entry

Don't allow the hover of mouse to auto-raise another window while you
are entering data into a text or number input.

Pull Request: https://projects.blender.org/blender/blender/pulls/105446